# aurora

./: .gitignore  CMakeLists.txt  imgui.ini
assets/shaders/: debug_raytracing.slang  diffuse.slang  intersection.slang  random.slang  raytracer.slang  rt-textures-test.slang  types.slang  utilities.slang
engine-assets/shaders/basic/: frag.slang  vert.slang
src/: app.cpp  app.hpp  assets.cpp  assets.hpp  basic_pass.hpp  camera.hpp  editor_camera.hpp  main.cpp  renderer.cpp  renderer.hpp
src/shaders/: common.slang  debug_draw_nodes.slang  debug_draw_triangles.slang  debug_trace_nodes.slang  debug_trace_primary.slang  debug_trace_primary_intersections.slang  debug_trace_triangles.slang  intersect.slang  triangles.slang
